Fixed value restoration for operation id dropdown

--- a/src/openapi-in.html
+++ b/src/openapi-in.html
@@ -58,16 +58,23 @@
                         return;
                     }
 
+                    const currentOperationId = this.operation;
+
                     $.each(paths, (path, methods) => {
                         $.each(methods, (name, method) => {
                             if (!method.operationId) {
                                 return;
                             }
 
+                            const selected =
+                                method.operationId === currentOperationId
+                                    ? 'selected'
+                                    : '';
+
                             $operation.append(`
-                                <option value="${
-                                    method.operationId
-                                }">[${name.toUpperCase()}] ${path}</option>
+                                <option value="${method.operationId}" ${
+                                selected ? 'selected' : ''
+                            }>[${name.toUpperCase()}] ${path}</option>
                             `);
                         });
                     });
