Removed storing hash

--- a/src/openapi-in.html
+++ b/src/openapi-in.html
@@ -94,7 +94,7 @@
 
                         if (i.id === configId) {
                             if (i.schema) {
-                                result = i.schema.content.paths;
+                                result = i.schema.paths;
                             }
                         }
                     });
